fix weird header alignment on smaller screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -30,6 +30,10 @@ p {
   margin: 1rem 0;
 }
 
+#landing-page h1 {
+  text-align: center;
+}
+
 .pane {
   position: absolute;
   top: 0;
